@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: dl2.c,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/08/15 05:35:41 $
+ @(#) $RCSfile: dl2.c,v $ $Name:  $($Revision: 0.9.2.7 $) $Date: 2007/08/19 12:03:19 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/08/15 05:35:41 $ by $Author: brian $
+ Last Modified $Date: 2007/08/19 12:03:19 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: dl2.c,v $
+ Revision 0.9.2.7  2007/08/19 12:03:19  brian
+ - move stdbool.h to compat.h
+
  Revision 0.9.2.6  2007/08/15 05:35:41  brian
  - GPLv3 updates
 
@@ -70,10 +73,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: dl2.c,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/08/15 05:35:41 $"
+#ident "@(#) $RCSfile: dl2.c,v $ $Name:  $($Revision: 0.9.2.7 $) $Date: 2007/08/19 12:03:19 $"
 
 static char const ident[] =
-    "$RCSfile: dl2.c,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/08/15 05:35:41 $";
+    "$RCSfile: dl2.c,v $ $Name:  $($Revision: 0.9.2.7 $) $Date: 2007/08/19 12:03:19 $";
 
 /*
  *  This is a multiplexing driver use to support linking DL streams.  When DL streams are linked
@@ -105,7 +108,7 @@ static char const ident[] =
 #include <linux/netdevice.h>
 #define ND_DESCRIP	"NETDEV (DL) STREAMS MULTIPLEXING DRIVER."
 #define ND_EXTRA	"Part of the OpenSS7 Stack for Linux Fast-STREAMS."
-#define ND_REVISION	"OpenSS7 $RCSfile: dl2.c,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/08/15 05:35:41 $"
+#define ND_REVISION	"OpenSS7 $RCSfile: dl2.c,v $ $Name:  $($Revision: 0.9.2.7 $) $Date: 2007/08/19 12:03:19 $"
 #define ND_COPYRIGHT	"Copyright (c) 1997-2006  OpenSS7 Corporation.  All Rights Reserved."
 #define ND_DEVICE	"Supports Linux HDLC devices."
 #define ND_CONTACT	"Brian Bidulock <bidulock@openss7.org>"
